# image_processing_opencv_app

./: CMakeLists.txt  opencv_app.cpp  project.cpp  project.h  tools.cpp  tools.h
labs/: lab1.cpp  lab1.h  lab10.cpp  lab10.h  lab11.cpp  lab11.h  lab2.cpp  lab2.h  lab3.cpp  lab3.h  lab4.cpp  lab4.h  lab5.cpp  lab5.h  lab6.cpp  lab6.h  lab7.cpp  lab7.h  lab8.cpp  lab8.h  lab9.cpp  lab9.h
